Change: Blog domain

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         unyacat.net
     </div>
     <div class="text-other">
-        <a href="https://unyacat.hatenablog.jp"><i class="fa fa-pencil" aria-hidden="true"></i> Blog</a>
+        <a href="https://unyacat.net"><i class="fa fa-pencil" aria-hidden="true"></i> Blog</a>
     </div>
     <div class="text-other">
         <a href="https://twitter.com/unya_2"><i class="fa fa-twitter" style="color:#1DA1F2;" aria-hidden="true"></i> Twitter</a>
