--- a/index.html
+++ b/index.html
@@ -1,67 +1,3 @@
-<html lang="ja">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="うにゃにゃっ！">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-    <meta name="theme-color" content="#F58EA8">
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@unya_2" />
-    <meta name="twitter:creator" content="@unya_2" />
-    <meta property="og:url" content="https://unyacat.net" />
-    <meta property="og:title" content="うにゃにゃ！" />
-    <meta property="og:description" content="Welcome to unyacat.net!" />
-    <meta property="og:image" content="https://unyacat.net/assets/img/unya_2-icon.png">
-    <title>うにゃにゃっ！</title>
-    <!-- Set Icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/main-icon.jpg">
-    <link rel="apple-touch-icon-precomposed" href="./assets/img/main-icon.jpg">
-    <link rel="icon" sizes="192x192" href="./assets/img/favicon.png">
-
-    <!-- Page styles -->
-    <link rel="shortcut icon" type="image/png" href="./assets/img/main-icon.jpg">
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/animate.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/5b4703d87e.css">
-
-    <!-- Google Analytics Tracking Code -->
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-72037216-1', 'auto');
-        ga('send', 'pageview');
-    </script>
-    <style>
-        #view-source {
-            display: block;
-            right: 0;
-            bottom: 0;
-            margin-right: 40px;
-            margin-bottom: 40px;
-            z-index: 900;
-        }
-    </style>
-</head>
-
-<body>
-    <div class="animated bounceInDown profile">
-        <img src="./assets/img/main-icon.jpg">
-    </div>
-    <div class="text-title">
-        unyacat.net
-    </div>
-    <div class="text-other">
-        <a href="https://unyacat.net"><i class="fa fa-pencil" aria-hidden="true"></i> Blog</a>
-    </div>
-    <div class="text-other">
-        <a href="https://twitter.com/unya_2"><i class="fa fa-twitter" style="color:#1DA1F2;" aria-hidden="true"></i> Twitter</a>
-    </div>
-    <div class="text-other">
-        <a href="a.html"><i class="fa fa-amazon" style="color:#F89820;" aria-hidden="true"></i> Amazon.co.jp</a>
-    </div>
-</body>
+<!doctype html><html lang=ja><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><meta name=author content="unyacat"><meta name=description content="unyacat's personal website"><meta name=keywords content="developer,personal"><meta property="og:site_name" content="sumika.unyacat.net"><meta property="og:title" content="sumika.unyacat.net"><meta property="og:description" content="unyacat's personal website"><meta property="og:type" content="website"><meta property="og:url" content="https://sumika.unyacat.net/"><meta property="og:image" content="https://sumika.unyacat.net"><meta name=twitter:card content="summary"><meta name=twitter:site content="https://sumika.unyacat.net/"><meta name=twitter:image content="https://sumika.unyacat.net"><base href=https://sumika.unyacat.net/><title>sumika.unyacat.net</title><link rel=canonical href=https://sumika.unyacat.net/><link rel=stylesheet href=https://use.fontawesome.com/releases/v5.2.0/css/all.css integrity=sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ crossorigin=anonymous><link rel=stylesheet href="https://fonts.googleapis.com/css?family=Fira+Mono:400,700"><link rel=stylesheet href=/css/normalize.min.css><link rel=stylesheet href=/css/style.min.css><link rel=icon type=image/png href=/images/favicon-32x32.png sizes=32x32><link rel=icon type=image/png href=/images/favicon-16x16.png sizes=16x16><link rel=alternate href=https://sumika.unyacat.net/index.xml type=application/rss+xml title=sumika.unyacat.net><link href=https://sumika.unyacat.net/index.xml rel=feed type=application/rss+xml title=sumika.unyacat.net><meta name=generator content="Hugo 0.80.0"></head><body><main class=wrapper><nav class=navigation><section class=container><a class=navigation-title href=/>sumika.unyacat.net</a>
+<input type=checkbox id=menu-control>
+<label class="menu-mobile float-right" for=menu-control><span class="btn-mobile float-right">&#9776;</span><ul class=navigation-list><li class="navigation-item align-center"><a class=navigation-link href=https://unyacat.net>Blog</a></li><li class="navigation-item align-center"><a class=navigation-link href=https://sumika.unyacat.net/about>About</a></li></ul></label></section></nav><div class=content><section class="container centered"><div class=about><div class=avatar><img src=https://sumika.unyacat.net/images/old_main-icon.jpg alt=avatar></div><h1>unyacat</h1><h2></h2><ul class=social-list><li class=social-item><a href=https://github.com/unyacat/ aria-label=Github><i class="fab fa-github" aria-hidden=true></i></a></li><li class=social-item><a href=https://twitter.com/unya_2/ aria-label=Twitter><i class="fab fa-twitter" aria-hidden=true></i></a></li></ul></div></section></div><footer class=footer><section class=container><div class="sns-shares sp-sns-shares"><a class="sns-share twitter-share" href="https://twitter.com/intent/tweet?original_referer=https%3a%2f%2fsumika.unyacat.net%2f&ref_src=twsrc%5Etfw&text=sumika.unyacat.net sumika.unyacat.net&tw_p=tweetbutton&url=https%3a%2f%2fsumika.unyacat.net%2f"><i class="fab fa-twitter"></i></a><a class="fb btn sns-share fb-share" href="http://www.facebook.com/share.php?u=https%3a%2f%2fsumika.unyacat.net%2f" onclick="window.open(this.href,'FBwindow','width=650, height=450, menubar=no, toolbar=no, scrollbars=yes');return false;"><i class="fab fa-facebook-f"></i></a><a class="sns-share hatena-share" href=http://b.hatena.ne.jp/entry/https://sumika.unyacat.net/ data-hatena-bookmark-layout=touch data-hatena-bookmark-width=40 data-hatena-bookmark-height=40 title=このエントリーをはてなブックマークに追加><i class="fas fa-bookmark"></i></a><a class="sns-share line-share" href="https://social-plugins.line.me/lineit/share?url=https%3a%2f%2fsumika.unyacat.net%2f"><i class="fab fa-line"></i></a></div>© 0001 · Powered by <a href=https://gohugo.io/>Hugo</a> & <a href=https://github.com/naro143/hugo-coder-portfolio>CoderPortfolio</a>.</section></footer><div class=fixed-bar><section class=container><div class="sns-shares pc-sns-shares"><a class="sns-share twitter-share" href="https://twitter.com/intent/tweet?original_referer=https%3a%2f%2fsumika.unyacat.net%2f&ref_src=twsrc%5Etfw&text=sumika.unyacat.net sumika.unyacat.net&tw_p=tweetbutton&url=https%3a%2f%2fsumika.unyacat.net%2f"><i class="fab fa-twitter"></i></a><a class="fb btn sns-share fb-share" href="http://www.facebook.com/share.php?u=https%3a%2f%2fsumika.unyacat.net%2f" onclick="window.open(this.href,'FBwindow','width=650, height=450, menubar=no, toolbar=no, scrollbars=yes');return false;"><i class="fab fa-facebook-f"></i></a><a class="sns-share hatena-share" href=http://b.hatena.ne.jp/entry/https://sumika.unyacat.net/ data-hatena-bookmark-layout=touch data-hatena-bookmark-width=40 data-hatena-bookmark-height=40 title=このエントリーをはてなブックマークに追加><i class="fas fa-bookmark"></i></a><a class="sns-share line-share" href="https://social-plugins.line.me/lineit/share?url=https%3a%2f%2fsumika.unyacat.net%2f"><i class="fab fa-line"></i></a></div></section></div></main><script src=/js/app.js></script></body></html>
