deploy: 558b7607872663b48db4bdfb6d2c8ae2e1ef8694

--- a/fanworks/index.html
+++ b/fanworks/index.html
@@ -1,3 +1,61 @@
 <!doctype html><html lang=ja><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><meta name=author content="unyacat"><meta name=description content="https://sumika.unyacat.net"><meta name=keywords content="developer,personal"><meta property="og:site_name" content="うにゃのすみか"><meta property="og:title" content="- うにゃのすみか"><meta property="og:description" content><meta property="og:type" content="website"><meta property="og:url" content="https://sumika.unyacat.net/fanworks/"><meta property="og:image" content="https://sumika.unyacat.net"><meta name=twitter:card content="summary"><meta name=twitter:site content="https://sumika.unyacat.net/fanworks/"><meta name=twitter:image content="https://sumika.unyacat.net"><base href=https://sumika.unyacat.net/fanworks/><title>- うにゃのすみか</title><link rel=canonical href=https://sumika.unyacat.net/fanworks/><link rel=stylesheet href="https://fonts.googleapis.com/css?family=Fira+Mono:400,700"><link rel=stylesheet href=/css/normalize.min.css><link rel=stylesheet href=/css/style.min.css><link rel=stylesheet href=/css/customize.css><link rel=icon href=/images/favicon.ico sizes=16x16><link rel=alternate href=https://sumika.unyacat.net/index.xml type=application/rss+xml title=うにゃのすみか><link href=https://sumika.unyacat.net/index.xml rel=feed type=application/rss+xml title=うにゃのすみか><meta name=generator content="Hugo 0.80.0"></head><body><main class=wrapper><nav class=navigation><section class=container><a class=navigation-title href=/>うにゃのすみか</a>
 <input type=checkbox id=menu-control>
-<label class="menu-mobile float-right" for=menu-control><span class="btn-mobile float-right">&#9776;</span><ul class=navigation-list><li class="navigation-item align-center"><a class=navigation-link href=https://sumika.unyacat.net/about>About</a></li><li class="navigation-item align-center"><a class=navigation-link href=https://sumika.unyacat.net/fanworks>FanWorks</a></li><li class="navigation-item align-center"><a class=navigation-link href=https://sumika.unyacat.net/showcase>Showcase</a></li></ul></label></section></nav><div class=content><section class="container page"><article><header><h1></h1></header><h1 id=ただいま準備中>ただいま準備中</h1><p>ごめんなさい！このページはまだできていません。もう少し待っててね。</p></article></section></div></main><script src=/js/app.js></script></body></html>
+<label class="menu-mobile float-right" for=menu-control><span class="btn-mobile float-right">&#9776;</span><ul class=navigation-list><li class="navigation-item align-center"><a class=navigation-link href=https://sumika.unyacat.net/about>About</a></li><li class="navigation-item align-center"><a class=navigation-link href=https://sumika.unyacat.net/fanworks>FanWorks</a></li><li class="navigation-item align-center"><a class=navigation-link href=https://sumika.unyacat.net/showcase>Showcase</a></li></ul></label></section></nav><div class=content><section class="container page"><article><header><h1></h1></header><h1 id=fan-works>Fan Works</h1><p>ファンから届いた作品を紹介します</p><h2 id=歌>歌</h2><h3 id=うにゃちゃんの冒険>うにゃちゃんの冒険</h3><p><audio src=/fanworks/music/うにゃちゃんの冒険.mp3 controls></audio></p><div class=highlight><pre class=chroma><code class=language-fallback data-lang=fallback>ふわふわしっぽが揺れるたび
+ピンクのリボンが空を舞う
+うにゃちゃん世界に笑顔咲かせ
+今日も冒険に出発だ
+
+うにゃ うにゃ 走り出す
+虹色の道をかけぬける
+うにゃ うにゃ みんなのヒーロー
+君のハートにジャンプするよ
+
+おしゃれな帽子をかぶったら
+どんな困難も怖くない
+星の輝きをポケットに
+ドキドキ胸は止まらない
+
+うにゃ うにゃ ほら見てて
+空の彼方までも飛べそう
+うにゃ うにゃ 夢は大きく
+果てない未来へ手を伸ばす
+
+時には転んで泣きたくても
+仲間と一緒なら怖くない
+ギターの音色が響く夜に
+希望のリズムが生まれるよ
+
+うにゃ うにゃ 笑顔届け
+七つの海も越えていく
+うにゃ うにゃ 君も一緒に
+手と手つなげば無敵だよ
+</code></pre></div><h3 id=うにゃちゃんの冒険-season2>うにゃちゃんの冒険 season2</h3><p><audio src=/fanworks/music/うにゃちゃんの冒険-season2.mp3 controls></audio></p><div class=highlight><pre class=chroma><code class=language-fallback data-lang=fallback>星空の下に集まって
+うにゃちゃんスマイル いつも勝手
+ぱたぱた耳で踊りだす
+世界がキラリ 魔法増す
+
+うにゃ うにゃ ダンスは止まらない
+キラキラ ジャンプで空越えたい
+「うにゃ！」って叫んで笑おうか
+可愛さ爆発 もう止まらん！
+
+しっぽフリフリでリズムに乗せて
+ふわふわ雲まで手が届いて
+太陽もお月さまも仲間
+うにゃちゃんがいるから怖くないさ
+
+うにゃ うにゃ ダンスは止まらない
+ドキドキ キュンで風を捉えたい
+「うにゃ！」って声に力込めて
+世界中を照らしていけ！
+
+ねぇ一緒に踊ってみないか
+この指とまれで始まる魔法さ
+どんな時でも笑顔が鍵
+うにゃちゃんリズムは天才的
+
+うにゃ うにゃ ダンスは止まらない
+キラキラ笑顔でみんな夢中
+「うにゃ！」の言葉は心つなぐ
+ステージ超えて 無限に続く
+</code></pre></div></article></section></div></main><script src=/js/app.js></script></body></html>
